// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlainButton should have giga link styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(12px - 0px) calc(32px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(12px - 1px) calc(32px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(12px - 0px) calc(32px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="giga"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should have kilo link styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="kilo"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should have mega link styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should have primary styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  background-color: #3388FF;
  border-color: #2567D8;
  color: #FFFFFF;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
}

.circuit-0:focus {
  border-color: #2567D8;
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Button
</button>
`;

exports[`PlainButton should render with default styles 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  size="mega"
  target={null}
>
  Link
</button>
`;

exports[`PlainButton should render with href 1`] = `
.circuit-0 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: inline-block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #D8DDE1;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

<a
  className="circuit-0 circuit-1"
  disabled={false}
  href="example"
  size="mega"
  target={null}
>
  Button
</a>
`;
